feat: Complete page commands

--- a/views/source-diff.ejs
+++ b/views/source-diff.ejs
@@ -80,7 +80,7 @@
               <li class="block navigation-menu-section">
                 <header class="navigation-menu-section-header ml3">
                   <!-- SVG to update here -->
-                  Sources to update <span id="source-list-to-update-count" class="text-tan-hide ml2" style="font-weight: normal"></span>
+                  <%resourceType%>s to update <span id="source-list-to-update-count" class="text-tan-hide ml2" style="font-weight: normal"></span>
                   <span class="collapsible-arrow icon fill-white open">
                     <svg viewbox="0 0 12.6 7.2">
                       <path
@@ -100,7 +100,7 @@
         <div class="material-card m4">
           <div class="p2">
             <div id="diff-summary">
-              <label class="form-control-label">Sources</label>
+              <label class="form-control-label"><%resourceType%>s</label>
               <div class="tab-navigation">
                 <div id="tab1" class="tab enabled active">To Create</div>
                 <div id="tab2" class="tab enabled">To Delete</div>
@@ -312,13 +312,13 @@
           if (diff[i].removed) {
             node = document.createElement('div');
             node.className = 'bg-soft-red diff-change';
-            node.appendChild(document.createTextNode(diff[i].value.replace(/^./gm, '-')));
+            node.appendChild(document.createTextNode(diff[i].value.replace(/^(.)/gm, '- $1')));
           } else if (diff[i].added) {
             node = document.createElement('div');
             node.className = 'bg-soft-green diff-change';
-            node.appendChild(document.createTextNode(diff[i].value.replace(/^./gm, '+')));
+            node.appendChild(document.createTextNode(diff[i].value.replace(/^(.)/gm, '+ $1')));
           } else {
-            node = document.createTextNode(diff[i].value);
+            node = document.createTextNode(diff[i].value.replace(/^(.)/gm, '  $1'));
           }
           fragment.appendChild(node);
         }
