fix: fix ejs typo

--- a/views/source-diff.ejs
+++ b/views/source-diff.ejs
@@ -80,7 +80,7 @@
               <li class="block navigation-menu-section">
                 <header class="navigation-menu-section-header ml3">
                   <!-- SVG to update here -->
-                  <%resourceType%>s to update <span id="source-list-to-update-count" class="text-tan-hide ml2" style="font-weight: normal"></span>
+                  <%=resourceType%>s to update <span id="source-list-to-update-count" class="text-tan-hide ml2" style="font-weight: normal"></span>
                   <span class="collapsible-arrow icon fill-white open">
                     <svg viewbox="0 0 12.6 7.2">
                       <path
@@ -100,7 +100,7 @@
         <div class="material-card m4">
           <div class="p2">
             <div id="diff-summary">
-              <label class="form-control-label"><%resourceType%>s</label>
+              <label class="form-control-label"><%=resourceType%>s</label>
               <div class="tab-navigation">
                 <div id="tab1" class="tab enabled active">To Create</div>
                 <div id="tab2" class="tab enabled">To Delete</div>
