fix: use light UI cdn (fixes #72)

--- a/views/source-diff.ejs
+++ b/views/source-diff.ejs
@@ -11,8 +11,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
     <!-- <script src="https://coveo.github.io/vapor/dist/js/CoveoStyleGuide.Dependencies.js"></script> -->
 
-    <script src="http://react-vapor.surge.sh/assets/bundle.js"></script>
-    <!-- <link rel="stylesheet" href="https://coveo.github.io/vapor/dist/css/CoveoStyleGuide.css" /> -->
+    <!-- <script src="http://react-vapor.surge.sh/assets/bundle.js"></script> -->
+    <link rel="stylesheet" href="https://coveo.github.io/vapor/dist/css/CoveoStyleGuide.css" />
 
     <!-- Custom CSS -->
     <style>
