chore: mega refactor * reduce artifact size * update packages

--- a/views/source-diff.ejs
+++ b/views/source-diff.ejs
@@ -48,9 +48,9 @@
   </head>
 
   <script>
-    window.sourcesToCreate = <%= SOURCES_TO_CREATE %>;
-    window.sourcesToDelete = <%= SOURCES_TO_DELETE %>;
-    window.sourcesToUpdate = <%= DIFF_OBJECT %>;
+    window.sourcesToCreate = <%- SOURCES_TO_CREATE %>;
+    window.sourcesToDelete = <%- SOURCES_TO_DELETE %>;
+    window.sourcesToUpdate = <%- DIFF_OBJECT %>;
   </script>
 
   <body>
